# hpc-agent

./: README.md  pyproject.toml
agent-config/: settings.json  systemprompt.txt
src/hpca/: __init__.py  app.py  config.py
